--- a/ClickIT/index.html
+++ b/ClickIT/index.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8" />
     <title>ClickIT</title>
 </head>
-<body>
+<body id="content" style="height:-webkit-fill-available">
     
-    <div id="content"></div>
     <!--<script src="www/js/phaser-ce/src/Phaser.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.1.1/phaser.js"></script>
     <script src="www/app.js"></script>
