--- a/ClickIT/index.html
+++ b/ClickIT/index.html
@@ -5,10 +5,33 @@
     <meta charset="utf-8" />
     <title>ClickIT</title>
 </head>
-<body id="content" style="height:-webkit-fill-available">
-    
-    <!--<script src="www/js/phaser-ce/src/Phaser.js"></script>-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.1.1/phaser.js"></script>
-    <script src="www/app.js"></script>
+
+<style>
+    html {
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
+        background: white;
+    }
+
+    body {
+        height: inherit;
+        width: inherit;
+        margin: 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #content {
+        width: 100%;
+        height: 100%;
+    }
+</style>
+<body>
+    <div id="content"></div>
+    <script src="www/js/lib/phaser.min.js"></script>
+    <script src="www/js/game.js"></script>
 </body>
 </html>
